# styeward-ui-sample

./: .gitignore  Cargo.toml  Dockerfile  buildspec-develop.yml  buildspec-main.yml  index.html  nginx.conf  style.css
js/: ag_grid.js  config.js
src/: components.rs  main.rs  state.rs
src/components/: current_selection.rs  nav.rs  schema.rs  table_description.rs  table_selection.rs  table_visualization.rs
src/components/schema/: test_schema.rs
